criação do dao pedido e função de cadastro de pedido

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -49,4 +49,24 @@
     <servlet-name>ServiceLivro</servlet-name>
     <url-pattern>/ServiceLivro</url-pattern>
   </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ServicePagamento</display-name>
+    <servlet-name>ServicePagamento</servlet-name>
+    <servlet-class>br.com.weblivraria.services.ServicePagamento</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ServicePagamento</servlet-name>
+    <url-pattern>/ServicePagamento</url-pattern>
+  </servlet-mapping>
+  <servlet>
+    <description></description>
+    <display-name>ServiceFinalizar</display-name>
+    <servlet-name>ServiceFinalizar</servlet-name>
+    <servlet-class>br.com.weblivraria.services.ServiceFinalizar</servlet-class>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>ServiceFinalizar</servlet-name>
+    <url-pattern>/ServiceFinalizar</url-pattern>
+  </servlet-mapping>
 </web-app>
